--- a/parent/device-registry/src/main/resources/public/pages/templates/edit.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/edit.html
@@ -1,196 +1,203 @@
 <form class="card" id="template-form">
-    <div class="card-body">
+	<div class="card-body">
 
-        <table style="width:100%">
-            <tr>
-                <td width="33.33%" style="padding: 0 1em 0 0;">
-                    <input type="text" style="display:none;" id="templateId" name="id" data-value="id">
-                    <div class="form-group">
-                        <label for="templateName">Name</label>
-                        <input required minlength="3" maxlength="255" class="form-control" id="templateName" name="name" data-value="name" placeholder="Template Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="templateDescription">Description</label>
-                        <input maxlength="255" type="text" class="form-control" id="templateDescription" name="description" data-value="description"
-                            placeholder="Template Description">
-                    </div>
+		<table style="width: 100%">
+			<tr>
+				<td width="33.33%" style="padding: 0 1em 0 0;"><input type="text" style="display: none;" id="templateId" name="id" data-value="id">
+					<div class="form-group">
+						<label for="templateName">Name</label> <input required minlength="3" maxlength="255" class="form-control" id="templateName" name="name" data-value="name"
+							placeholder="Template Name"
+						>
+					</div>
+					<div class="form-group">
+						<label for="templateDescription">Description</label> <input maxlength="255" type="text" class="form-control" id="templateDescription" name="description"
+							data-value="description" placeholder="Template Description"
+						>
+					</div></td>
+				<td width="33.33%" style="padding: 0 1em 0 1em;">
+					<div class="form-group">
+						<label for="templateTags">Tags</label> <input type="text" class="form-control" id="templateTags" data-value="tags" name="tags" placeholder="Tags (type and press Enter)">
+					</div>
+					<div class="form-group">
+						<label for="inactivityPeriod">Inactivity Period</label> <input required digits min="60" type="text" class="form-control" id="inactivityPeriod" name="inactivityPeriod"
+							data-value="inactivityPeriod" placeholder="Inactivity Period (in seconds)"
+						>
+					</div>
+				</td>
+				<td width="33.33%" style="padding: 0 0 0 1em;">
+					<div class="form-group">
+						<label for="templateProperties">Properties</label>
+						<textarea maxlength="255" placeholder="key=value" class="form-control" id="templateProperties" data-value="properties" name="properties" data-format="MapFormatter"
+							data-format-target="value" rows="5"
+						></textarea>
+					</div>
+				</td>
+			</tr>
+			<tr>
+				<td colspan="3">
+					<h3>Metrics</h3>
+					<table id="metrics-table" class="table table-striped table-bordered table-sm" style="width: 100%;">
+						<thead>
+							<tr>
+								<th scope="col">Name</th>
+								<th scope="col">Abbreviation</th>
+								<th scope="col">Unit</th>
+								<th scope="col">Data Type</th>
+								<th scope="col">Description</th>
+								<th scope="col">
+									<button type="button" class="btn btn-primary btn-sm" formnovalidate="formnovalidate" id="newMetricBtn">
+										<span class="fa fa-plus"></span> New Metric
+									</button>
+								</th>
+							</tr>
+						</thead>
+					</table>
+				</td>
+			</tr>
+		</table>
 
-                </td>
-                <td width="33.33%" style="padding: 0 1em 0 1em;">
-                    <div class="form-group">
-                        <label for="templateTags">Tags</label>
-                        <input type="text" class="form-control" id="templateTags" data-value="tags" name="tags" placeholder="Tags (type and press Enter)">
-                    </div>
-                    <div class="form-group">
-                        <label for="inactivityPeriod">Inactivity Period</label>
-                        <input required digits min="60" type="text" class="form-control" id="inactivityPeriod" name="inactivityPeriod" data-value="inactivityPeriod"
-                            placeholder="Inactivity Period (in seconds)">
-                    </div>
-                </td>
-                <td width="33.33%" style="padding: 0 0 0 1em;">
-                    <div class="form-group">
-                        <label for="templateProperties">Properties</label>
-                        <textarea maxlength="255" placeholder="key=value" class="form-control" id="templateProperties" data-value="properties" name="properties"
-                            data-format="MapFormatter" data-format-target="value" rows="5"></textarea>
-                    </div>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="3">
-                    <h3>
-                        Metrics
-                    </h3>
-                    <table id="metrics-table" class="table table-striped table-bordered table-sm" style="width:100%;">
-                        <thead>
-                            <tr>
-                                <th scope="col">Name</th>
-                                <th scope="col">Abbreviation</th>
-                                <th scope="col">Unit</th>
-                                <th scope="col">Data Type</th>
-                                <th scope="col">Description</th>
-                                <th scope="col">
-                                    <button type="button" class="btn btn-primary btn-sm" formnovalidate="formnovalidate"  id="newMetricBtn">
-                                        <span class="fa fa-plus"></span> New Metric
-                                    </button>
-                                </th>
-                            </tr>
-                        </thead>
-                    </table>
-                </td>
-            </tr>
-        </table>
-
-        <div class="button-bar">
-            <a href="#" id="cancelButton" class="btn btn-secondary">
-                <i class="fa fa-trash"></i> Cancel
-            </a>
-            <button type="submit" href="#" id="saveButton" class="btn btn-primary">
-                <i class="fa fa-save"></i> Save
-            </button>
-        </div>
+		<div class="button-bar">
+			<a href="#" id="cancelButton" class="btn btn-secondary"> <i class="fa fa-trash"></i> Cancel
+			</a>
+			<button type="submit" href="#" id="saveButton" class="btn btn-primary">
+				<i class="fa fa-save"></i> Save
+			</button>
+		</div>
 
 
-    </div>
+	</div>
 </form>
 
 
 
 <script>
-    $("#cancelButton").click(function () {
-        window.history.back();
-    });
-    $("#template-form").validate({
-		rules:{
-			name: {
-				required: true,
-				remote: {
-					url: "/api/v1/templates",
-					data: {
-						id: function(){
-							return $("#templateId").val();
-						},
-						name: function(){
-							return $("#templateName").val();
-						}
-					}
-				}
-			}
-		},    	
-    	submitHandler: function(form, event){
-    		var template = {
-				id: $("#templateId").val(),    				
-    			name: $("#templateName").val(),
-    			description: $("#templateDescription").val(),
-    			tags: $("#templateTags").val().split(","),
-    			inactivityPeriod: $("#inactivityPeriod").val(),
-    			properties: {},
-    			metrics: []
-    		};
-    		$("#templateProperties").val().split("\n").forEach(function(item){
-    			var pair = item.split("=");
-    			template.properties[pair[0]] = pair[1];
-    		});
-    		for(var index = 0; index < metricsDataTable.rows().data().length; index++){
-    			template.metrics.push(metricsDataTable.rows().data()[index].clone());
-    		}
-    		templateService.save(JSON.stringify(template));
-    	}
-    });
-
-    var metricsData = null;
-    var metricsDataTable = null;
-    var showMetricsDataTable = function (metrics) {
-        metricsData = metrics;
-        metricsDataTable = $("#metrics-table").DataTable({
-            rowId: "id",
-            searching: false,
-            ordering: false,
-            paging: false,
-            info: false,
-            data: metrics,
-            columnDefs: [{
-                targets: -1,
-                className: "text-center"
-            }],
-            columns: [
-                { data: "name" },
-                { data: "abbreviation" },
-                { data: "unit" },
-                { data: "dataType" },
-                { data: "description" },
-                {
-                    render: function (data, type, full, meta) {
-                        return '<div class="btn-group" role="group">' +
-                            '<button type="button" class="btn btn-warning btn-xs" onclick="showMatricEditorModal(this, event, ' + meta.row + ');">' +
-                            '<span class="fa fa-edit"></span> Edit' +
-                            '</button>' +
-                            '<button type="button" class="btn btn-danger btn-xs" onclick="showMetricDeleteConfirmation(this, event, '+meta.row+');">' +
-                            '<span class="fa fa-trash"></span> Delete' +
-                            '</button>' +
-                            '</div>';
-                    }
-                }
-            ]
-        });
-    };
-
-    $("#newMetricBtn").click(function (metric) {
-        showMetricEditView(null);
-    });
-    var showMatricEditorModal = function (source, event, index) {
-        event.preventDefault();
-        source.blur();
-        metric = metricsDataTable.row(index).data();
-        showMetricEditView(metric);
-    };
-    var showMetricEditView = function (metric) {
-        $("#modal-container").loadTemplate("pages/metrics/edit.html", metric, {
-            success: function () {
-                $("#modal-container").modal();
-                $("#metricEditorSaveButton").click(function () {
-                    if (metric) {
-                        populateMetric(metric);
-                    } else {
-                        newMetric = {};
-                        populateMetric(newMetric);
-                        metricsData.push(newMetric);
-                    }
-                    metricsDataTable.clear().rows.add(metricsData).draw();
-                    $.modal.close();
-                });
-            }
-        });
-    };
-	var showMetricDeleteConfirmation = function(source, event, index){
-		event.preventDefault();
-	    source.blur();
-	    row = metricsDataTable.row(index);
-	    metric = row.data();
-        $.publish("show-confirmation-modal", [{
-            message: "Are you sure you want to delete metric " + metric.name + " ?"
-        }, function () {
-        	row.remove().draw();
-            $.modal.close();
-        }]);
-	};
+	render = (function($) {
+		var metricsData = null;
+	    var metricsDataTable = null;
+	    
+	    $("#cancelButton").click(function() {
+		    window.history.back();
+	    });
+	    $("#newMetricBtn").click(function(metric) {
+		    showMetricEditView(null);
+	    });
+	    var showMatricEditorModal = function(source, event, index) {
+		    event.preventDefault();
+		    source.blur();
+		    metric = metricsDataTable.row(index).data();
+		    showMetricEditView(metric);
+	    };
+	    var showMetricEditView = function(metric) {
+		    $("#modal-container").loadTemplate("pages/metrics/edit.html", metric, {
+			    success : function() {
+				    $("#modal-container").modal();
+				    $("#metricEditorSaveButton").click(function() {
+					    if (metric) {
+						    populateMetric(metric);
+					    } else {
+						    newMetric = {};
+						    populateMetric(newMetric);
+						    metricsData.push(newMetric);
+					    }
+					    metricsDataTable.clear().rows.add(metricsData).draw();
+					    $.modal.close();
+				    });
+			    }
+		    });
+	    };
+	    var showMetricDeleteConfirmation = function(source, event, index) {
+		    event.preventDefault();
+		    source.blur();
+		    row = metricsDataTable.row(index);
+		    metric = row.data();
+		    $.publish("show-confirmation-modal", [ {
+			    message : "Are you sure you want to delete metric " + metric.name + " ?"
+		    }, function() {
+			    row.remove().draw();
+			    $.modal.close();
+		    } ]);
+	    };
+	    $("#template-form").validate({
+	        rules : {
+		        name : {
+		            required : true,
+		            remote : {
+		                url : "/api/v1/templates",
+		                data : {
+		                    id : function() {
+			                    return $("#templateId").val();
+		                    },
+		                    name : function() {
+			                    return $("#templateName").val();
+		                    }
+		                }
+		            }
+		        }
+	        },
+	        submitHandler : function() {
+		        templateService.save(JSON.stringify(toModel()));
+	        }
+	    });
+	    var toModel = function(template){
+			template = template ? template : {};	    	
+	    	template.id = $("#templateId").val();
+	    	template.name = $("#templateName").val();
+		    template.description = $("#templateDescription").val();
+		    template.tags = $("#templateTags").val().split(",");
+		    template.inactivityPeriod = $("#inactivityPeriod").val();
+		    template.properties = {};
+		    template.metrics = [];
+		    $("#templateProperties").val().split("\n").forEach(function(item) {
+		        var pair = item.split("=");
+		        template.properties[pair[0]] = pair[1];
+	        });
+	        for (var index = 0; index < metricsDataTable.rows().data().length; index++) {
+		        template.metrics.push(metricsDataTable.rows().data()[index].clone());
+	        }
+	    	return template;
+	    };
+	    
+	    var toView = function(template){
+	    	if(template){
+	    		$("#page-title").html(template.id || template.id > 0 ? "Edit Templates Details" : "New Template");
+	    		showMetricsDataTable(template.metrics);
+	    	}
+	    };
+	    
+	    var showMetricsDataTable = function(metrics) {
+		    metricsData = metrics;
+		    metricsDataTable = $("#metrics-table").DataTable(
+		            {
+		                rowId : "id",
+		                searching : false,
+		                ordering : false,
+		                paging : false,
+		                info : false,
+		                data : metrics,
+		                columnDefs : [ {
+		                    targets : -1,
+		                    className : "text-center"
+		                } ],
+		                columns : [
+		                        {data : "name"},
+		                        {data : "abbreviation"},
+		                        {data : "unit"},
+		                        {data : "dataType"},
+		                        {data : "description"},
+		                        {
+			                        render : function(data, type, full, meta) {
+				                        return '<div class="btn-group" role="group">'
+				                                + '<button type="button" class="btn btn-warning btn-xs" onclick="showMatricEditorModal(this, event, ' + meta.row + ');">'
+				                                + '<span class="fa fa-edit"></span> Edit' + '</button>'
+				                                + '<button type="button" class="btn btn-danger btn-xs" onclick="showMetricDeleteConfirmation(this, event, ' + meta.row + ');">'
+				                                + '<span class="fa fa-trash"></span> Delete' + '</button>' + '</div>';
+			                        }
+		                        } ]
+		            });
+	    };
+	   	
+	    return function(template){
+	    	toView(template);
+	    };
+    })(jQuery);
 </script>
