--- a/parent/device-registry/src/main/resources/public/pages/templates/edit.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/edit.html
@@ -13,7 +13,7 @@
 				<td width="33.33%" style="padding: 0 1em 0 1em;">
 					<div class="form-group">
 						<label for="templateTags">Tags</label> 
-						<input type="text" class="form-control" id="templateTags" data-value="tags" data-role="tagsinput" name="tags" placeholder="Tags (type and press Space)">
+						<input type="text" class="form-control" id="templateTags" data-value="tags" data-role="tagsinput" name="tags" placeholder="type and press Space">
 					</div>
 					<div class="form-group">
 						<label for="inactivityPeriod">Inactivity Period</label> <input required digits min="60" type="text" class="form-control" id="inactivityPeriod" name="inactivityPeriod"
