--- a/parent/device-registry/src/main/resources/public/index.css
+++ b/parent/device-registry/src/main/resources/public/index.css
@@ -13,6 +13,7 @@ input, textarea, select, .form-control{
 }
 .bootstrap-tagsinput{
 	width: 100%;
+	border-radius: 0;
 }
 .button-bar{
 	padding-top: 2em;
