--- a/parent/device-registry/src/main/resources/public/pages/templates/edit.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/edit.html
@@ -1,32 +1,53 @@
+<style>
+	#template-form table tr td{
+		vertical-align: top;
+		padding: 0 1em 0 1em;
+		width: 33.33%;
+	};
+	#template-form table tr td:FIRST-CHILD {
+		padding: 0 1em 0 0;
+	};
+	#template-form table tr td:LAST-CHILD {
+		padding: 0 0 0 1em;
+	};
+</style>
+
 <form class="card" id="template-form">
 	<div class="card-body">
-
+		<input type="text" style="display: none;" id="templateId" name="id" data-value="id">
 		<table style="width: 100%">
 			<tr>
-				<td width="33.33%" style="padding: 0 1em 0 0;"><input type="text" style="display: none;" id="templateId" name="id" data-value="id">
+				<td>
 					<div class="form-group">
-						<label for="templateName">Name</label> <input required minlength="3" maxlength="255" class="form-control" id="templateName" name="name" data-value="name" placeholder="Template Name">
+						<label for="templateName">Name</label> 
+						<input data-rule-required="true" data-rule-minlength="3" data-rule-maxlength="255" class="form-control" id="templateName" name="name" data-value="name" placeholder="Template Name">
 					</div>
+					
+				<td>
 					<div class="form-group">
-						<label for="templateDescription">Description</label> <input maxlength="255" type="text" class="form-control" id="templateDescription" name="description" data-value="description" placeholder="Template Description">
+						<label for="inactivityPeriod">Inactivity Period</label> 
+						<input data-rule-required="true" data-rule-digits="true" data-rule-min="60" type="text" class="form-control" id="inactivityPeriod" name="inactivityPeriod" data-value="inactivityPeriod" placeholder="Inactivity Period (in seconds)">
+					</div>
+					
+				</td>
+				<td rowspan="2">
+					<div class="form-group">
+						<label for="templateProperties">Properties</label>
+						<textarea data-rule-maxlength="255" placeholder="key=value" class="form-control" id="templateProperties" data-value="properties" name="properties" data-format="MapFormatter" data-format-target="value" rows="5"></textarea>
+					</div>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<div class="form-group">
+						<label for="templateDescription">Description</label> 
+						<input data-rule-maxlength="255" type="text" class="form-control" id="templateDescription" name="description" data-value="description" placeholder="Template Description">
 					</div></td>
-				<td width="33.33%" style="padding: 0 1em 0 1em;">
+				</td>
+				<td>
 					<div class="form-group">
 						<label for="templateTags">Tags</label> 
 						<input type="text" class="form-control" id="templateTags" data-value="tags" data-role="tagsinput" name="tags" placeholder="type and press Space">
-					</div>
-					<div class="form-group">
-						<label for="inactivityPeriod">Inactivity Period</label> <input required digits min="60" type="text" class="form-control" id="inactivityPeriod" name="inactivityPeriod"
-							data-value="inactivityPeriod" placeholder="Inactivity Period (in seconds)"
-						>
-					</div>
-				</td>
-				<td width="33.33%" style="padding: 0 0 0 1em;">
-					<div class="form-group">
-						<label for="templateProperties">Properties</label>
-						<textarea maxlength="255" placeholder="key=value" class="form-control" id="templateProperties" data-value="properties" name="properties" data-format="MapFormatter"
-							data-format-target="value" rows="5"
-						></textarea>
 					</div>
 				</td>
 			</tr>
@@ -112,7 +133,6 @@
 	    $("#template-form").validate({
 	        rules : {
 		        name : {
-		            required : true,
 		            remote : {
 		                url : "/api/v1/templates",
 		                data : {
@@ -160,7 +180,7 @@
 			    	  trimValue: true,
 			    	  maxChars: 255,
 			    	  maxTags: 10,
-			    	  confirmKeys: [13, 32, 44, 188]
+			    	  confirmKeys: [13, 32, 44, 186, 188]
 			    });
 			    if(template.tags){
 			    	template.tags.forEach(function(tag){
