--- a/parent/device-registry/src/main/resources/public/pages/templates/edit.html
+++ b/parent/device-registry/src/main/resources/public/pages/templates/edit.html
@@ -144,6 +144,9 @@
 		                    }
 		                }
 		            }
+		        },
+		        properties: {
+		        	propertiesMap : true
 		        }
 	        },
 	        submitHandler : function() {
